--- a/codigo-fonte/main.css
+++ b/codigo-fonte/main.css
@@ -276,6 +276,15 @@ aside .pointer {
 
 
 
+/* ESTILIZAÇÕES DA SECTION 3 POR RANAN */
+
+
+
+
+
+/* ESTILIZAÇÕES DA SECTION 3 POR RANAN */
+
+
 /*--------------------------------ÁREA DE RESPONSIVIDADE ----------------------------- */
 /*nav media*/
 @media only screen and (max-width: 768px) {
