--- a/codigo-fonte/section2.css
+++ b/codigo-fonte/section2.css
@@ -1,7 +1,7 @@
 #containerComoDoar{
     display: flex;
     flex-direction: column;
-    height: 80rem;
+    height: 100rem;
     background: #BE8F90; 
     
     align-items: end;  
@@ -12,11 +12,130 @@
     align-self: top;
     margin-right: 2rem;
     font-size: 5rem;
+    padding-bottom: 2rem;
 
 }
 
 #h3ComoDoar{
+    text-transform: uppercase;
     color: #fff;
     align-self: center;
-    font-size: 2.5rem;
+    text-align: center;
+    width: 800px;
+    font-size: 2rem;
+    margin-bottom: 5rem;
+}
+
+.requisitos{
+
+    background-color: #fff;
+    width: 15rem;
+    height: 8rem;
+    margin-left: 8rem;
+    margin-right: 8rem;
+    border-radius: 7px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    padding: 1rem;
+    
+}
+
+.requisito, p{
+    color: #BEBEBE;
+    text-align: center;
+    font-family: Roboto;
+    font-style: normal;
+    letter-spacing: 3.36px;
+    font-weight: 500;
+    line-height: 110%;
+}
+
+#requisito1{
+    align-self: flex-start;
+    height: 94px;
+}
+
+#requisito2{
+    align-self: flex-end;
+    height: 230px;
+}
+
+#requisito3{
+    align-self: flex-start;
+    height: 93px;
+}
+
+#requisito4{
+    align-self: flex-end;
+    height: 128px;
+}
+
+#requisito5{
+    align-self: flex-start;
+    height: 164px;
+}
+
+.topicoNumber{
+    align-self: center;
+    background-color: #A63539;
+    border-radius: 50%;
+    width: 70px;
+    height: 70px;
+    
+}
+
+
+.topicoNumber > p{
+    color: #fff;
+    margin: 25% 37%;
+    align-self: center;
+    font-style: normal;
+    font-size: 2rem;
+    font-weight: 600;
+    font-family: Roboto;
+    line-height: 110%;
+    letter-spacing: 6.72px;
+    
+    
+}
+
+.topicoNumber1{
+    position:absolute;
+}
+
+.topicoNumber2{
+    position:absolute;
+    top: 1300;
+}
+
+.textValidar{
+    color: #FFF;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 26px;
+    font-style: normal;
+    font-weight: 500;
+    width: 500px;
+    letter-spacing: 3.92px;
+    line-height: 110%; /* 30.8px */
+    padding: 10px;
+}
+
+#validarRequisito{
+    width: 400px;
+    margin-right: 50px;
+    margin-top: 40px;
+}
+
+#linhaAgendamento{
+    border: thin solid white;
+    align-self: flex-end;
+    width: 900px;
+    margin: 50px 0px;
+}
+
+#tituloAgendamento{
+    color: #fff;
+    align-self: flex-start;
+    margin-left: 100px;
+    font-size: 5rem;
 }
