--- a/codigo-fonte/section2.css
+++ b/codigo-fonte/section2.css
@@ -49,31 +49,6 @@
     line-height: 110%;
 }
 
-#requisito1{
-    align-self: flex-start;
-    height: 94px;
-}
-
-#requisito2{
-    align-self: flex-end;
-    height: 230px;
-}
-
-#requisito3{
-    align-self: flex-start;
-    height: 93px;
-}
-
-#requisito4{
-    align-self: flex-end;
-    height: 128px;
-}
-
-#requisito5{
-    align-self: flex-start;
-    height: 164px;
-}
-
 .topicoNumber{
     align-self: center;
     background-color: #A63539;
@@ -96,15 +71,6 @@
     letter-spacing: 6.72px;
     
     
-}
-
-.topicoNumber1{
-    position:absolute;
-}
-
-.topicoNumber2{
-    position:absolute;
-    top: 1300;
 }
 
 .textValidar{
@@ -139,3 +105,12 @@
     margin-left: 100px;
     font-size: 5rem;
 }
+
+.alinhamentoRequisitos{
+    display: flex;
+    flex-direction: row;
+    border: 1px solid black;
+    justify-content: flex-start;
+    width: 100%
+}
+
