--- a/codigo-fonte/main.css
+++ b/codigo-fonte/main.css
@@ -300,6 +300,7 @@ footer {
     position: relative;
     bottom: 0;
     width: 100%;
+    height: 35vh;
     padding-bottom: 20px;
     padding-top: 20px;
     margin-top: auto;
@@ -341,6 +342,7 @@ footer ul {
     cursor: pointer;
     font-family: "Inter", sans-serif;
     padding-left: 200px;
+    margin-top: 20px;
 }
 
 #siga-nos {
@@ -376,10 +378,12 @@ footer ul {
 
 .logo-redes :hover {
     transform: scale(1.06);
+    transition: 0.4s;
 }
 
 .itens-lista:hover {
     transform: scale(1.03);
+    transition: 0.4s;
 }
 
 .logo-redes img {
