--- a/codigo-fonte/section2.css
+++ b/codigo-fonte/section2.css
@@ -1,153 +1,462 @@
-#containerComoDoar{
+/* NÃO TIRAR AS FONTES DAQUI */
+@import url('https://fonts.googleapis.com/css2?family=Belanosima&family=Ovo&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
+
+
+/* --------------> ESTILIZAÇÃO TÍTULO */
+
+.how_donate {
+    background-color: #BE8F90;
+    height: 220vh;
+    padding-top: 50px;
+}
+
+/* --------------> ESTILIZAÇÃO ÍCONE */
+
+.dot_area{
     display: flex;
-    flex-direction: column;
-    height: 130rem;
-    background: #BE8F90; 
-    
-    align-items: end;  
+    flex-direction: row;
+    justify-content: end;
+    align-items: center;
 }
 
-#h1ComoDoar{
-    color: #fff;
-    align-self: top;
-    margin-right: 2rem;
-    font-size: 5rem;
-    padding-bottom: 2rem;
-
+.dot_icon {
+    width: 14px;
+    height: 12px;
+    border: 1px solid #fff;
+    background-color: #a63539;
+    margin-right: 20px;
 }
 
-#h3ComoDoar{
-    text-transform: uppercase;
-    color: #fff;
-    align-self: center;
+
+.title_how_donate h1 {
+    color: #ffffff;
+    font-family: 'Ovo', serif;
+    font-size: 80px;
+    font-weight: 400;
     text-align: center;
-    width: 800px;
-    font-size: 2rem;
-    margin-bottom: 5rem;
-}
-
-.requisitos{
-
-    background-color: #fff;
-    width: 15rem;
-    height: 8rem;
-    margin-left: 8rem;
-    margin-right: 8rem;
-    border-radius: 7px;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-    padding: 1rem;
-    
-}
-
-.requisito, p{
-    color: #BEBEBE;
-    text-align: center;
-    font-family: Roboto;
-    font-style: normal;
-    letter-spacing: 3.36px;
-    font-weight: 500;
-    line-height: 110%;
-}
-
-.topicoNumber{
-    align-self: center;
-    background-color: #A63539;
-    border-radius: 50%;
-    width: 70px;
-    height: 70px;
-    
+    margin-right: 45px;
+    padding-bottom: 26px;
 }
 
 
-.topicoNumber > p{
-    color: #fff;
-    margin: 25% 37%;
-    align-self: center;
-    font-style: normal;
-    font-size: 2rem;
-    font-weight: 600;
-    font-family: Roboto;
-    line-height: 110%;
-    letter-spacing: 6.72px;
-    
-    
-}
+/* --------------> ESTILIZAÇÃO SUB-TÍTULO*/
 
-.textValidar{
-    color: #FFF;
-    text-align: center;
-    font-family: Roboto;
-    font-size: 26px;
-    font-style: normal;
-    font-weight: 500;
-    width: 500px;
-    letter-spacing: 3.92px;
-    line-height: 110%; /* 30.8px */
-    padding: 10px;
-}
-
-#validarRequisito{
-    width: 400px;
-    margin-right: 50px;
+.subtitle_how_donate {
+    display: flex;
+    justify-content: center;
     margin-top: 40px;
 }
 
-#linhaAgendamento{
-    border: thin solid white;
-    align-self: flex-end;
-    width: 75%;
-    margin: 50px 0px;
-}
 
-#tituloAgendamento{
-    color: #fff;
-    align-self: flex-start;
-    margin-left: 100px;
-    font-size: 5rem;
-}
-
-.alinhamentoRequisitos{
-    display: flex;
-    flex-direction: row;
-    border: 1px solid black;
-    justify-content: flex-start;
-    width: 100%
-}
-
-.alinhamentoRequisitos{
-    display: flex;
-    flex-direction: row;
-    border: 1px solid black;
-    justify-content: center;
-    width: 100%
-
-}
-
-#topicoNumber1{
-    align-self: center;
-}
-
-#map{
-    margin-top: 1.5rem;
-    margin-right: 5rem;
-    height: 110%;
-    width: 50%;
-}
-
-.calendar {
-    height: 57%;
-    font-weight: 30%;
-    width: 30%;
-    margin: 0 auto;
+.subtitle_how_donate h2 {
+    width: 772px;
     text-align: center;
-    margin-top: 8%;
+    font-family: 'Roboto', sans-serif;
+    font-size: 26px;
+    font-style: bolder;
+    line-height: 110%;
+    letter-spacing: 4.16px;
+    text-transform: uppercase;
+    color: #fff;
+    line-height: 35px;
+}
+
+
+/* --------------> ÁREA DE FLUXO DE REQUISITOS */
+
+
+.steps_area {
+    width: 90%;
+    height: 1200px;
+    display: flex;
+    justify-content: center;
+}
+
+.steps_area_form {
+    width: 1400px;
+    height: 1000px;
+    display: flex;
+}
+
+.steps_left,
+.steps_right {
+    width: 662.5px;
+    height: 1300px;
+    display: grid;
+    flex-wrap: wrap;
+    grid-template-columns: repeat(2, 1fr);
+    justify-content: center;
+    margin-top: 25px;
+}
+
+.steps_center {
+    width: 75px;
+    height: 1200px;
+}
+
+.circle_icon {
+    width: 75px;
+    height: 69px;
+    border-radius: 50px;
+    background-color: #a63539;
+    color: #fff;
+    display: flex;
+    margin-top: 130px;
+    justify-content: center;
+    align-items: center;
+    font-size: 32px;
+    font-family:'Roboto', sans-serif;
+    font-weight: 600;   
+}
+
+/* LADO ESQUERDO*/
+.step_text_area1 {
+    width: 400px;
+    height: 110px;
+    border-radius: 7px;
+    background: #FFF;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    margin-top: 100px;
+    margin-left: 60px;
+}
+
+.step_text_area1:hover  {
+    background: #a63539;
+    transition: ease 0.7s;
+    color: #ffffff;
+}
+
+.step_line_area1 {
+    width: 300px;
+    height: 1px;
+    background-color: #ffffffb7;
+    margin-top: 140px;
+}
+
+.step_text_area1 h4 {
+    color: #BEBEBE;
+    text-align: center;
+    font-family: 'Roboto';
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 110%; /* 26.4px */
+    letter-spacing: 3.36px;
+}
+
+
+/* LADO 2 DIREITO */
+.step_text_area2 {
+    width: 600px;
+    height: 230px;
+    border-radius: 7px;
+    background: #FFF;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    margin-top: 230px;
+    margin-left: -15px;
+}
+
+
+.step_line_area2 {
+    width: 300px;
+    height: 1px;
+    background-color: #ffffffb7;
+    margin-top: 338px;
+    margin-left: 225px;
+}
+
+.step_text_area2 h4 {
+    color: #BEBEBE;
+    text-align: justify;
+    padding: 0px 20px 0px 20px;
+    font-family: 'Roboto';
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 110%; /* 26.4px */
+    letter-spacing: 3.36px;
+}
+
+
+.step_text_area2:hover  {
+    background: #a63539;
+    transition: ease 0.7s;
+    color: #ffffff;
+}
+
+/* FINAL 2 LADO DIREITO */
+
+/* LADO 4 DIREITO */
+.step_text_area4 {
+    width: 600px;
+    height: 130px;
+    border-radius: 7px;
+    background: #FFF;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    margin-left: -15px;
+    margin-bottom: 250px;
+}
+
+
+.step_line_area4 {
+    width: 300px;
+    height: 1px;
+    background-color: #ffffffb7;
+    margin-top: 50px;
+    margin-left: 225px;
+}
+
+.step_text_area4 h4 {
+    color: #BEBEBE;
+    text-align: justify;
+    padding: 0px 20px 0px 20px;
+    font-family: 'Roboto';
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 110%; /* 26.4px */
+    letter-spacing: 3.36px;
+}
+
+
+.step_text_area4:hover  {
+    background: #a63539;
+    transition: ease 0.7s;
+    color: #ffffff;
+}
+
+/* FINAL 4 LADO DIREITO */
+
+/* INÍCIO 3 LADO ESQUERDO */
+.step_text_area3 {
+    width: 400px;
+    height: 95px;
+    border-radius: 7px;
+    background: #FFF;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    margin-left: 60px;
+}
+
+
+.step_text_area3 h4 {
+    color: #BEBEBE;
+    text-align: center;
+    font-family: 'Roboto';
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 110%; /* 26.4px */
+    letter-spacing: 3.36px;
+}
+
+
+.step_line_area3 {
+    width: 300px;
+    height: 1px;
+    background-color: #ffffffb7;
+    margin-top: 45px;
+}
+
+.step_text_area3:hover  {
+    background: #a63539;
+    transition: ease 0.7s;
+    color: #ffffff;
+}
+
+.step_text_area5 {
+    width: 400px;
+    height: 155px;
+    border-radius: 7px;
+    background: #FFF;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    margin-left: 60px;
+}
+
+.step_text_area5 h4 {
+    color: #BEBEBE;
+    text-align: center;
+    font-family: 'Roboto';
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 110%; /* 26.4px */
+    letter-spacing: 3.36px;
+    padding: 5px 5px 2px 2px;
+}
+
+.step_line_area5 {
+    width: 300px;
+    height: 1px;
+    background-color: #ffffffb7;
+    margin-top: 68px;
+}
+
+.step_text_area5:hover  {
+    background: #a63539;
+    transition: ease 0.7s;
+    color: #ffffff;
+}
+
+
+
+/* ESTILIZAÇÃO DA ÁREA DE REQUISITOS*/
+
+.validation_area {
+    width: 100%;
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.validation_text {
+    width: 1200px;
+    height: 100px;
+    
+}
+
+.validation_text h4 {
+    color: #FFF;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 28px;
+    font-style: normal;
+    line-height: 110%; /* 30.8px */
+    letter-spacing: 3.92px;
+}
+
+#validation_button {
+    width: 250px;
+    height: 50px;
+    border-radius: 7px;
+    background: #A63539;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    border: none;
+    color: #FFF;
+    font-family:'Roboto', sans-serif;
+    font-weight: 600;   
+    font-size: 20px;
+    letter-spacing: 2.08px;
+    text-transform: uppercase;
+    cursor: pointer;
+}
+
+#validation_button:hover {
+    background-color: #FBB6B6;
+    transition: ease 0.7s;
+}
+
+
+.line_section {
+    display: flex;
+    justify-content: end;
+    margin-top: 80px;
+}
+
+.line_section_main {
+    width: 75%;
+    height: 1px;
+    background-color: #ffffff8a;
+}
+
+.dot_area_agendamento {
+    display: flex;
+    flex-direction: row;
+    justify-content: initial;
+    align-items: center;
+    margin-left: 50px;
+}
+
+.dot_icon {
+    width: 14px;
+    height: 12px;
+    border: 1px solid #fff;
+    background-color: #a63539;
+    margin-right: 20px;
+}
+
+
+/* ÁREA DE AGENDAMENTO */
+
+.schedular_area {
+    width: 100%;
+    height: 60vh;
+
+    display: flex;
+    justify-content: center;
+}
+
+.schedular_right{
+    display: grid;
+    width: 100%;
+    flex-wrap: wrap;
+    grid-template-columns: repeat(2, 0fr);
+    justify-content: center;
+    align-items: center;
+}
+
+.schedular_left {
+    display: grid;
+    width: 60%;
+    flex-wrap: wrap;
+    grid-template-columns: repeat(1, 0fr);
+    justify-content: center;
+    align-items: center;
+}
+
+.calendar_main {
+    width: 530px;
+    height: 300px;
+    padding: 30px 10px 30px 10px;
     background-color: #fff;
+    border-radius: 3px;
+    margin-top: 150px;
+}
+
+.schedular_right iframe {
+    width: 941px;
+    height: 647px;
+    border: none;
+    border-radius: 7px;
+}
+
+.button_main {
+    display: flex;
+    justify-content: center;
+    height: 250px;
+}
+
+.button_main button {
+    width: 250px;
+    height: 50px;
+    border-radius: 7px;
+    background: #A63539;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    border: none;
+    color: #FFF;
+    font-family:'Roboto', sans-serif;
+    font-weight: 600;   
+    font-size: 20px;
+    letter-spacing: 2.08px;
+    text-transform: uppercase;
+    cursor: pointer;
+}
+
+
+.button_main button:hover {
+    background-color: #FBB6B6;
+    transition: ease 0.7s;
 }
 
 .month {
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 20px;
+    text-align: center;
 }
 
 .days {
@@ -177,7 +486,3 @@
     grid-template-columns: repeat(7, 1fr);
 }
 
-#ButtonAgendar{
-    margin-top: 70px;
-    width: 100%;
-}
