--- a/codigo-fonte/section2.css
+++ b/codigo-fonte/section2.css
@@ -154,13 +154,14 @@
 
 /* LADO 2 DIREITO */
 .step_text_area2 {
-    width: 600px;
-    height: 230px;
+    width: 400px;
+    height: 280px;
     border-radius: 7px;
     background: #FFF;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     margin-top: 230px;
     margin-left: -15px;
+    padding-bottom: 5px;
 }
 
 
@@ -195,22 +196,22 @@
 
 /* LADO 4 DIREITO */
 .step_text_area4 {
-    width: 600px;
+    width: 400px;
     height: 130px;
     border-radius: 7px;
     background: #FFF;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-    margin-left: -15px;
-    margin-bottom: 250px;
+    margin-bottom: 306px;
+    margin-right: 180px;
 }
 
 
 .step_line_area4 {
-    width: 300px;
+    width: 301px;
     height: 1px;
     background-color: #ffffffb7;
-    margin-top: 50px;
-    margin-left: 225px;
+    margin-top: 47px;
+    margin-left: 223px;
 }
 
 .step_text_area4 h4 {
