--- a/codigo-fonte/main.css
+++ b/codigo-fonte/main.css
@@ -289,6 +289,86 @@ aside .pointer {
 
 
 /* ESTILIZAÇÕES DA SECTION 3 POR RANAN */
+section3
+
+    .Cont{
+    width: 100%;
+    height: 980px;
+    flex-shrink: 0;
+    background: #767676;
+    
+
+    }
+    .text {
+    width: 100%;
+    height: 93px;
+    flex-shrink: 0;
+    color: #FFF;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 25px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 125%; /* 35.2px */
+    letter-spacing: 5.12px;    
+    padding-top: 98px;
+    
+    }
+    .form_cont label { 
+    display: flex;
+    font-size: 20px;
+    margin-bottom: 15px;
+    margin-left: 600px;
+    align-items: right;
+    color:#BEBEBE;
+    padding-top: 25px;
+    font-family: Roboto;
+  
+
+    }
+
+    .form_cont input {
+    height: 50px;
+    width: 1000px;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    color:#BEBEBE;
+    font-family: Roboto;
+       
+    }
+   
+    .form_cont textarea {
+    height: 100px;
+    width: 1000px;
+    display: center;
+    flex-direction: column;
+    color: black;
+    margin-left: 0px;
+    font-family: Roboto;
+    margin-bottom: 10px;
+    resize: none;
+   
+    }
+    .button_enviar {
+    width: 150px;
+    height: 40px;
+    padding: 5px;
+    background: #A63539;
+    color: #fff;
+    border-radius: 7px;
+    border: 0;
+    cursor: pointer;
+    font-family: 'Inter', sans-serif;
+    font-style: 600;
+    font-size: 1.0rem;
+        
+    }
+    .button_enviar:hover {
+    background-color: #FBB6B6;
+    transition: all .3s;
+
+    }
 
 
 
