--- a/codigo-fonte/section1.css
+++ b/codigo-fonte/section1.css
@@ -31,12 +31,11 @@ section.containerProjeto {
 }
 
 div.botaoPraCima {
-    background-color: #8d8c8c;
-    border: 1px solid rgb(134, 134, 134);
+    background: rgb(134, 134, 134);
+    border:  solid rgb(134, 134, 134);
     border-radius: 10px;
-    width: 55px;
-    height: 55px;
-    position: absolute;
+    width: 50px;
+    height: 50px;
     text-align: center;
     right: 100px;
     top: 1650px;
@@ -45,7 +44,7 @@ div.botaoPraCima {
 div.botaoPraCima:hover {
     transform: scale(1.1);
     box-shadow: 1px 1px 10px #A63539;
-    padding-bottom: 20px;
+    padding: 2px;
 }
 
 .conteudo-projeto {
@@ -68,68 +67,4 @@ div.botaoPraCima:hover {
     line-height: 163.5%; /* 45.78px */
     letter-spacing: 1.5px;
 
-}
-
-@media (max-width: 800px) {
-    .h1-projeto {
-        font-size: 55px;
-        margin-left: 410px;
-    }
-
-    img.logo {
-        width: 325px;
-        height: 220px;
-        position: absolute;
-        top: 700px;
-        left: 80px;
-    }
-
-    div.conteudo-projeto {
-        left: 80px;
-        width: 690px;
-    }
-
-    div.conteudo-projeto > p{
-        font-weight: 200;
-        margin: 0 1px;
-        font-size: 20px;
-        text-align: justify;
-        line-height: 59px;
-        letter-spacing: 3px;
-    }
-    div.botaoPraCima {        
-        right: 9%;
-        top: 1650px;
-    }
-}
-
-@media(min-width: 1200px) {
-    
-    .h1-projeto {
-        font-size: 75px;
-    }
-
-    img.logo {
-        width: 280px;
-        height: 180px;
-        position: absolute;
-    }
-
-    div.conteudo-projeto {
-        left: 80px;
-        width: 1090px;
-    }
-
-    div.conteudo-projeto > p{
-        font-weight: 200;
-        margin: 0 1px;
-        font-size: 25px;
-        text-align: justify;
-        line-height: 60px;
-        letter-spacing: 6px;
-    }
-    div.botaoPraCima {        
-        right: 3%;
-        top: 1650px;
-    }
 }
