--- a/codigo-fonte/main.css
+++ b/codigo-fonte/main.css
@@ -288,66 +288,119 @@ aside .pointer {
 
 
 /* ESTILIZAÇÕES DA SECTION 3 POR RANAN */
-section3
+section3 {
+    
+        display: flex;
+        justify-content: center;
+        height: 871px;
+        width: auto;
+        background-color: #767676;
 
-    .Cont{
+}
+
+Cont{
     width: 100%;
     height: 980px;
     flex-shrink: 0;
     background: #767676;
-    
+    position: relative;
 
     }
-    .text {
-    width: 100%;
-    height: 93px;
-    flex-shrink: 0;
-    color: #FFF;
-    text-align: center;
-    font-family: Roboto;
+h2 {
+        color: #f3f3f3;
+        text-align: center;
+} 
+    
+form {
+    overflow-block:hidden ;
+    position: absolute;
+    justify-items: center;
     font-size: 25px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 125%; /* 35.2px */
-    letter-spacing: 5.12px;    
-    padding-top: 98px;
-    
-    }
-    .form_cont label { 
-    display: flex;
-    font-size: 20px;
-    margin-bottom: 15px;
-    margin-left: 600px;
-    align-items: right;
-    color:#BEBEBE;
-    padding-top: 25px;
-    font-family: Roboto;
-  
-
-    }
-
-    .form_cont input {
+    color: #000;
+    width: 1103px;
     height: 50px;
-    width: 1000px;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    color:#BEBEBE;
-    font-family: Roboto;
+    margin-top: 40px;
+    }
+input {
+        color: black;
+        font-size: 20px;
+        width: 100%;
+        padding: 20px 5px 5px;
+        background-color:#fff;
+        border: none;
+        border-radius: 4px; 
+        margin-top: 20px;
        
     }
+label {
+    color: #000;
+    position: relative;
+    width: 200px;
+    height: 30px; 
+    font-family: Roboto;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 10px;
+    line-height: 130%; /* 22px */
+    letter-spacing: 1.2px;
+    flex-shrink: 0;
+    pointer-events: none;
+    border-bottom: 1px solid #ffffff;
+      
+    }
+span {
+        position: absolute;
+        width: 20px;
+        bottom: 5px;
+        left: 5px;
+        font-size: 25px;
+        transition: all 0.3s ease;
+        
+      }
+
+label::after {
+        content: "";
+        position: relative;
+        left: 0;
+        bottom: -1px;
+        width: 100%;
+        height: 100%;
+        border-bottom: 3px solid #e0138c;
+        transform: translateX(-100%);
+        transition: all 0.3s ease;
+      }
+      
+input:focus + label span,
+input:valid + label span {
+        transform: translateY(-150%);
+        font-size: 25px;
+        bottom: 10px;
+        color: #A63539;
+        
+      }
+      
+input:focus + label::after,
+input:valid + label::after {
+        transform: translateX(0%);
+      }
    
-    .form_cont textarea {
-    height: 100px;
-    width: 1000px;
-    display: center;
-    flex-direction: column;
-    color: black;
-    margin-left: 0px;
+    .form_cont{
+    height: 150px;
+    width: 100%; 
+    color:#000;
     font-family: Roboto;
     margin-bottom: 10px;
+    border-radius: 7px;
     resize: none;
-   
+    margin-left: 0%;
+    font-size: 25px;
+    font-style: normal;
+    font-weight: 10px;
+    line-height: 110%; /* 22px */
+    letter-spacing: 1.2px;
+    flex-shrink: 0;
+    margin-top: 25px;
+
     }
     .button_enviar {
     width: 150px;
@@ -361,6 +414,8 @@ section3
     font-family: 'Inter', sans-serif;
     font-style: 600;
     font-size: 1.0rem;
+    margin-left: 40%;
+
         
     }
     .button_enviar:hover {
